deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: level
  labels:
    app: level
spec:
  selector:
    matchLabels:
      app: level
  replicas: 1
  template:
    metadata:
      labels:
        app: level
    spec:
      containers:
      - name: level
        image: level
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
