deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: level
  labels:
    app: level
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: level
